--- a/.github/workflows/copilot-setup-steps.yml
+++ b/.github/workflows/copilot-setup-steps.yml
@@ -10,6 +10,7 @@ permissions:
 jobs:
   copilot-setup-steps:
     runs-on: ubuntu-latest
+    environment: copilot
     steps:
       - name: Checkout repository
         uses: actions/checkout@v3
